# sagittadb

./: .coverage  .gitignore  README.md  TEST_SUITE_SUMMARY.md  debug_json.py  debug_search.py  m.py  pyproject.toml  pytest.ini  run_tests.py  test.db
examples/: README.md  advanced_querying.py  basic_usage.py  ecommerce_demo.py  in_memory_usage.py  migration_backup.py  performance_benchmark.py
src/sagitta/: __init__.py  sagitta.py
src/sagittadb/: __init__.py  sagittadb.py
tests/: README.md  conftest.py  test_basic.py  test_edge_cases.py  test_indexing.py  test_insert.py  test_performance.py  test_retrieval.py  test_search.py  test_update_remove.py
