[project]
name = "sagitta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ruslan Iskov", email = "ruslan.rv.ua+github@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "orjson>=3.10.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
