[project]
name = "SagittaDB"
version = "0.1.0"
description = "A lightweight, document-oriented database using SQLite."
readme = "README.md"
authors = [
    { name = "Ruslan Iskov", email = "ruslan.rv.ua+github@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
orjson = [
    "orjson>=3.10.18",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
